tests/invalid/block_expr.fl
main :: proc () {
  {
    a = 123;
  }
}
